# merry

./: .gitignore  .travis.yml  CHANGELOG.md  CHANGES.md  LICENSE  MANIFEST.in  README.md  merry.py  pyproject.toml  setup.cfg  setup.py  test_merry.py  tox.ini
.github/workflows/: tests.yml
docs/: api.rst  conf.py  index.rst  quickstart.rst
src/merry/: __init__.py
tests/: test_merry.py
