[project]
name = "merry"
version = "0.3.1.dev0"
authors = [
    { name = "Miguel Grinberg", email = "miguel.grinberg@gmail.com" },
]
description = "Decorator based error parsing."
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"
dependencies = []

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/miguelgrinberg/merry"
"Bug Tracker" = "https://github.com/miguelgrinberg/merry/issues"

[project.optional-dependencies]
docs = [
    "sphinx",
]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = [
    "src",
]
namespaces = false

[build-system]
requires = [
    "setuptools>=61.2",
]
build-backend = "setuptools.build_meta"
