[metadata]
name = merry
version = 0.3.0
author = Miguel Grinberg
author_email = miguel.grinberg@gmail.com
description = Decorator based error parsing.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/miguelgrinberg/merry
project_urls =
    Bug Tracker = https://github.com/miguelgrinberg/merry/issues
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =

[options.packages.find]
where = src
